force-app/main/default/objects/pstar__Appointment__c/pstar__Appointment__c.object-meta.xml
<CustomObject>
    <description>Appointment/Visit records synced from Credible</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>APPT-{0000}</displayFormat>
        <label>Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>