force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Appr__c.field-meta.xml
<CustomField>
    <fullName>Credible_Appr__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Appr</label>
    <type>Checkbox</type>
</CustomField>