force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Appr_Date__c.field-meta.xml
<CustomField>
    <fullName>Credible_Appr_Date__c</fullName>
    <label>Credible Appr Date</label>
    <type>DateTime</type>
</CustomField>