force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Appr_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Credible_Appr_Date_UTC__c</fullName>
    <label>Credible Appr Date UTC</label>
    <type>DateTime</type>
</CustomField>