force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Appr_User__c.field-meta.xml
<CustomField>
    <fullName>Credible_Appr_User__c</fullName>
    <label>Credible Appr User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>