force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Auth_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Credible_Auth_Exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Auth Exceeded</label>
    <type>Checkbox</type>
</CustomField>