force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Auth_Level__c.field-meta.xml
<CustomField>
    <fullName>Credible_Auth_Level__c</fullName>
    <label>Credible Auth Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>