force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Axis_Code__c.field-meta.xml
<CustomField>
    <fullName>Credible_Axis_Code__c</fullName>
    <label>Credible Axis Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>