force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Billing_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Credible_Billing_Group_Id__c</fullName>
    <label>Credible Billing Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>