force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Bool_2__c.field-meta.xml
<CustomField>
    <fullName>Credible_Bool_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Bool 2</label>
    <type>Checkbox</type>
</CustomField>