force-app/main/default/objects/pstar__Appointment__c/fields/Credible_By_Emp_Id__c.field-meta.xml
<CustomField>
    <fullName>Credible_By_Emp_Id__c</fullName>
    <label>Credible By Emp Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>