force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Cascaded_Comb_Rate__c.field-meta.xml
<CustomField>
    <fullName>Credible_Cascaded_Comb_Rate__c</fullName>
    <label>Credible Cascaded Comb Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>