force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Cat_Completed__c.field-meta.xml
<CustomField>
    <fullName>Credible_Cat_Completed__c</fullName>
    <label>Credible Cat Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>