force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Chief_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Credible_Chief_Complaint__c</fullName>
    <label>Credible Chief Complaint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>