force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Client_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Credible_Client_First_Name__c</fullName>
    <label>Credible Client First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>