force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Credible_Client_Id__c</fullName>
    <label>Credible Client Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>