force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Clientaxisdetail_Id_4__c.field-meta.xml
<CustomField>
    <fullName>Credible_Clientaxisdetail_Id_4__c</fullName>
    <label>Credible Clientaxisdetail Id 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>