force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Clientvisit_Id__c.field-meta.xml
<CustomField>
    <fullName>Credible_Clientvisit_Id__c</fullName>
    <externalId>true</externalId>
    <label>Credible Clientvisit Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>