force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Comb_Primary__c.field-meta.xml
<CustomField>
    <fullName>Credible_Comb_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Comb Primary</label>
    <type>Checkbox</type>
</CustomField>