force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Comb_Rate__c.field-meta.xml
<CustomField>
    <fullName>Credible_Comb_Rate__c</fullName>
    <label>Credible Comb Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>