force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Comb_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Credible_Comb_Secondary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Comb Secondary</label>
    <type>Checkbox</type>
</CustomField>