force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Comb_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Credible_Comb_Timeout__c</fullName>
    <label>Credible Comb Timeout</label>
    <type>DateTime</type>
</CustomField>