force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Contract_Rate__c.field-meta.xml
<CustomField>
    <fullName>Credible_Contract_Rate__c</fullName>
    <label>Credible Contract Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>