force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Cotherapist__c.field-meta.xml
<CustomField>
    <fullName>Credible_Cotherapist__c</fullName>
    <label>Credible Cotherapist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>