force-app/main/default/objects/pstar__Appointment__c/fields/Credible_CPT_Code__c.field-meta.xml
<CustomField>
    <fullName>Credible_CPT_Code__c</fullName>
    <label>Credible CPT Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>