force-app/main/default/objects/pstar__Appointment__c/fields/Credible_CPT_Modifier_2__c.field-meta.xml
<CustomField>
    <fullName>Credible_CPT_Modifier_2__c</fullName>
    <label>Credible CPT Modifier 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>