force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Credible_Date_1__c</fullName>
    <label>Credible Date 1</label>
    <type>DateTime</type>
</CustomField>