force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Credible_Date_2__c</fullName>
    <label>Credible Date 2</label>
    <type>DateTime</type>
</CustomField>