force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Date_3__c.field-meta.xml
<CustomField>
    <fullName>Credible_Date_3__c</fullName>
    <label>Credible Date 3</label>
    <type>DateTime</type>
</CustomField>