force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Credible_Date_Created__c</fullName>
    <label>Credible Date Created</label>
    <type>DateTime</type>
</CustomField>