force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Credible_Date_Updated__c</fullName>
    <label>Credible Date Updated</label>
    <type>DateTime</type>
</CustomField>