force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Deleted_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Credible_Deleted_Diagnosis__c</fullName>
    <label>Credible Deleted Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>