force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Duration__c.field-meta.xml
<CustomField>
    <fullName>Credible_Duration__c</fullName>
    <label>Credible Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>