force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Emp_Name__c.field-meta.xml
<CustomField>
    <fullName>Credible_Emp_Name__c</fullName>
    <label>Credible Emp Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>