force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Esignature_Status__c.field-meta.xml
<CustomField>
    <fullName>Credible_Esignature_Status__c</fullName>
    <label>Credible Esignature Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>