force-app/main/default/objects/pstar__Appointment__c/fields/Credible_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Credible_External_Id__c</fullName>
    <label>Credible External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>