force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Fnum_1__c.field-meta.xml
<CustomField>
    <fullName>Credible_Fnum_1__c</fullName>
    <label>Credible Fnum 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>