force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Fnum_3__c.field-meta.xml
<CustomField>
    <fullName>Credible_Fnum_3__c</fullName>
    <label>Credible Fnum 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>