force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Formgroup_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Credible_Formgroup_Incomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Formgroup Incomplete</label>
    <type>Checkbox</type>
</CustomField>