force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Guarantor_Dependent_Id__c.field-meta.xml
<CustomField>
    <fullName>Credible_Guarantor_Dependent_Id__c</fullName>
    <label>Credible Guarantor Dependent Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>