force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Handheld_Version__c.field-meta.xml
<CustomField>
    <fullName>Credible_Handheld_Version__c</fullName>
    <label>Credible Handheld Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>