force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Has_Picture__c.field-meta.xml
<CustomField>
    <fullName>Credible_Has_Picture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Has Picture</label>
    <type>Checkbox</type>
</CustomField>