force-app/main/default/objects/pstar__Appointment__c/fields/Credible_ICD10_Code_4__c.field-meta.xml
<CustomField>
    <fullName>Credible_ICD10_Code_4__c</fullName>
    <label>Credible ICD10 Code 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>