force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Info_Blocking_Exception__c.field-meta.xml
<CustomField>
    <fullName>Credible_Info_Blocking_Exception__c</fullName>
    <label>Credible Info Blocking Exception</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>