force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Is_Emergency__c.field-meta.xml
<CustomField>
    <fullName>Credible_Is_Emergency__c</fullName>
    <label>Credible Is Emergency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>