force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Is_Episodeforced__c.field-meta.xml
<CustomField>
    <fullName>Credible_Is_Episodeforced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Is Episodeforced</label>
    <type>Checkbox</type>
</CustomField>