force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Is_Readonly__c.field-meta.xml
<CustomField>
    <fullName>Credible_Is_Readonly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Is Readonly</label>
    <type>Checkbox</type>
</CustomField>