force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Manual_Redx__c.field-meta.xml
<CustomField>
    <fullName>Credible_Manual_Redx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Manual Redx</label>
    <type>Checkbox</type>
</CustomField>