force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Manual_Redx_Note__c.field-meta.xml
<CustomField>
    <fullName>Credible_Manual_Redx_Note__c</fullName>
    <label>Credible Manual Redx Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>