force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Manual_Update_To_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Credible_Manual_Update_To_Modifier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Manual Update To Modifier</label>
    <type>Checkbox</type>
</CustomField>