force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Med_Schedule_Version__c.field-meta.xml
<CustomField>
    <fullName>Credible_Med_Schedule_Version__c</fullName>
    <label>Credible Med Schedule Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>