force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Multiple_Flag__c.field-meta.xml
<CustomField>
    <fullName>Credible_Multiple_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Multiple Flag</label>
    <type>Checkbox</type>
</CustomField>