force-app/main/default/objects/pstar__Appointment__c/fields/Credible_NDC__c.field-meta.xml
<CustomField>
    <fullName>Credible_NDC__c</fullName>
    <label>Credible NDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>