force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Non_Billable__c.field-meta.xml
<CustomField>
    <fullName>Credible_Non_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Non Billable</label>
    <type>Checkbox</type>
</CustomField>