force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Num_3__c.field-meta.xml
<CustomField>
    <fullName>Credible_Num_3__c</fullName>
    <label>Credible Num 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>