force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Overproduction_Id__c.field-meta.xml
<CustomField>
    <fullName>Credible_Overproduction_Id__c</fullName>
    <label>Credible Overproduction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>