force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Overproduction_Units__c.field-meta.xml
<CustomField>
    <fullName>Credible_Overproduction_Units__c</fullName>
    <label>Credible Overproduction Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>