force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Qty_Administered__c.field-meta.xml
<CustomField>
    <fullName>Credible_Qty_Administered__c</fullName>
    <label>Credible Qty Administered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>