force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Rate_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Credible_Rate_Per_Unit__c</fullName>
    <label>Credible Rate Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>