force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Reason_For_Visit__c.field-meta.xml
<CustomField>
    <fullName>Credible_Reason_For_Visit__c</fullName>
    <label>Credible Reason For Visit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>