force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Rem_Address__c.field-meta.xml
<CustomField>
    <fullName>Credible_Rem_Address__c</fullName>
    <label>Credible Rem Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>