force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Reprocess_For_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Credible_Reprocess_For_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credible Reprocess For Payroll</label>
    <type>Checkbox</type>
</CustomField>