force-app/main/default/objects/pstar__Appointment__c/fields/Credible_Rev_Timein__c.field-meta.xml
<CustomField>
    <fullName>Credible_Rev_Timein__c</fullName>
    <label>Credible Rev Timein</label>
    <type>DateTime</type>
</CustomField>